@@ -1,3 +1,14 @@
+2005-08-09  Daniel P. Ottavio  <dottavio@ic.sunysb.edu>
+
+	* amd/sun_map_parse.y: Moved license below special yacc bracket to
+	be portable with HPUX's yacc.  Clean up externs.
+
+	* amd/sun_map_tok.l: Moved license below special lex bracket to be
+	portable with HPUX's lex.  Fixed definitions to allow for a
+	non-flex lex to parse strings instead of files.  Added some casts
+	to strlcpy usage to silence warnings.  Moved the % options because
+	HPUX was complaining,
+	
 2005-08-08  Daniel P. Ottavio  <dottavio@ic.sunysb.edu>
 
 	* amd/sun_map_tok.l: Applied some definition goop to handle the
